# functional

./: Cargo.toml  README.md  fib.lc  test_fib.lc
docs/superpowers/plans/: 2026-04-26-minimal-lambda-language-phase-a.md  2026-04-30-hm-type-inference-advisory.md  2026-04-30-primitive-nat.md  2026-05-04-io-monad.md
docs/superpowers/specs/: 2026-04-26-minimal-lambda-language-design.md  2026-04-28-m6-simplifier-design.md  2026-05-04-io-monad-design.md
examples/: bench.rs  bench_report.rs  hot.rs  identity.lc  let_demo.lc  numerals.lc
examples/booleans/: and_tf.lc  and_tt.lc  not_t.lc  or_ft.lc
examples/factorial/: fact_3.lc
lib/: prelude.lc
src/: ast.rs  cbn.rs  debruijn.rs  error.rs  eval.rs  infer.rs  io_runtime.rs  lib.rs  main.rs  parser.rs  pretty.rs  repl.rs  simplify.rs  strict.rs  type_error.rs  types.rs
tests/: booleans_test.rs  factorial_test.rs  infer_prelude_test.rs  io_eval_test.rs  io_types_test.rs  main_io_check_test.rs  parser_test.rs  prelude_test.rs  primitives_test.rs  simplify_parity_test.rs  stdlib_test.rs  strict_parity_test.rs
